--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,20 @@ header {
 }
 
 section {
-  background-color: linear-gradient(180deg, #17DCB3 0%, #091D24 100%);
+  background: linear-gradient(180deg, #17DCB3 0%, #091D24 100%);
   display: flex;
   justify-content: center;
 }
 
 section img {
   max-width: 90%;
+}
+
+.form-evento {
+  background-color: #212121;
+  padding: 32px 28px;
+  border-radius: 16px;
+  width: 384px;
+  max-width: 90%;
+  margin: 4rem auto;
 }
