feat: pass temas prop to FormularioEvento and update ListaSuspensa to use itens prop

--- a/src/components/ListaSuspensa/lista-suspensa.estilos.css
+++ b/src/components/ListaSuspensa/lista-suspensa.estilos.css
@@ -9,6 +9,6 @@
     padding: 0.5rem 1rem;
 }
 
-.lista-suspensa-form::placeholder {
+/* .lista-suspensa-form::placeholder {
     color: #4A4949;
-}
+} */
